<resources>
    <string name="app_name">SahlApp</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="phonenumber">Enter Your Contact Number</string>
    <string name="save">Save</string>
    <string name="address"> Your Address "</string>
    <string name="logout">Log out</string>
    <string name="email"> your Email "</string>
    <string name="region">Please choose your region</string>
    <string name="i_am_visitor">Visitor</string>
    <string name="Enter_your_mobile_number">Enter your mobile number</string>
    <string name="Enter_your_mobile_number_to_create_an_account">Enter your mobile number to create an account</string>
    <string name="Login">Login</string>
    <string name="Country">Country</string>
    <string name="City">City</string>
    <string name="District">District</string>

    <string name="CityKsa">Province</string>
    <string name="DistrictKsa">Governorate</string>

    <string name="Verification_code">Verification code</string>
    <string name="Please_type_the_verification_code">Please type the verification code sent to your phone.</string>
    <string name="didnt_receive">Didn\'t receive the code?</string>
    <string name="Please_wait">Please wait</string>
    <string name="resend">resend</string>
    <string name="error_region_msg">Please choose valid region</string>
    <string name="error_wrong_number">Please Enter a Valid Number</string>
    <string name="error_wrong_verification">Wrong code</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="lang">eng</string>
    <string name="alrawdah">Al Rawdah</string>
    <string name="albawadi">AL Bawadi</string>
    <string name="almunsiyah">Al Munsiya</string>
    <string name="adiriyah">Ad Diriyah</string>

    <string name="alharamen">Al Haraman</string>
    <string name="alfesalya">Al Fesalya</string>
    <string name="almalaz">Al Malaz</string>
    <string name="hay_elsefarat">Hay El-Sefarat</string>

    <string name="Maadi">Maadi</string>
    <string name="Nasr_city">Nasr city</string>

    <string name="Fesal">Fesel</string>
    <string name="Zamalek">Zamalek</string>








    <!-- Navigation Drawer menu labels -->

    <!-- Toolbar titles when navigation menu item is selected -->

    <string name="cars">Cars</string>
    <string name="buildings">Buildings</string>
    <string name="Hospitals">Hospitals</string>
    <string name="myads">My ADS</string>
    <string name="profile">PROFILE</string>
    <string name="favorites">SAVED</string>
    <string name="newestads">NEWEST ADS</string>
    <string name="create_add">Create Add</string>
    <string name="favoritetext">You Don\'t Have any saved items</string>
    <string name="sign_in">Sign In</string>
    <string name="adstext">You Didn\'t sell anything until now</string>
    <string name="no_ads_found">No ADS Found</string>
    <string name="No_Saved_Items">No Saved Items</string>
    <string name="name">Name</string>
    <string name="CATEGORIES">CATEGORIES</string>
    <string name="change_lang">Change Language</string>
    <string name="Please_choose_lang">Please choose language</string>
    <string name="Want_change_Lang">Do you want to change language</string>
    <string name="Done">Done</string>
    <string name="Cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="my_cart">My Cart</string>
    <string name="internal_storage">Internal Storage</string>


</resources>
