<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffff"
    tools:context=".Region.Region.RegionActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countrylogo"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tregion"
        android:layout_marginStart="10dp"
        android:text="@string/region"
        android:textSize="20sp"
        android:layout_gravity="center"
                />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/sp_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Country"
            app:met_floatingLabel="normal"

             />
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/sp_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/City"
            android:textColorHint="#05ab9a"
            app:met_floatingLabel="normal" />
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/sp_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/District"
            android:textColorHint="#05ab9a"
            app:met_floatingLabel="normal" />

    </LinearLayout>




    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnsearch"
        android:text="@string/search"
        android:textColor="#ffff"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_style_ogin"
        />


</LinearLayout>