<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".Region.Login.VerificationActivity">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/inputCodeLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Verification_code"
            android:textSize="24sp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Please_type_the_verification_code"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textSize="14sp"
            android:paddingTop="18dp"
            android:layout_marginBottom="20dp"
            />
        <com.goodiebag.pinview.Pinview
            android:id="@+id/pinview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pinWidth="30dp"
            app:pinHeight="30dp"
            app:pinLength="6"
            app:cursorVisible="false"
            app:forceKeyboard="true"
            app:hint="-"
            app:inputType="number"
            app:password="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/didnt_receive"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textSize="12sp"
            android:paddingTop="18dp"
            android:layout_marginBottom="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Please_wait"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timer"
                android:layout_marginLeft="10dp"
                android:text="0:30"
                android:textColor="#dc1515"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:id="@+id/resend"
                android:textColor="#228e0a"
                android:text="@string/resend"
                android:textSize="15sp"
                />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_signin"
        android:layout_gravity="center"
        android:background="@drawable/button_style_ogin"
        android:layout_marginTop="10dp"
        android:textColor="#ffffffff"
        android:text="Sign in"
        />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pgloadingVerification"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
</LinearLayout>